Header and Editor's Choice alignment fixes

--- a/src/components/EditorsChoice/editorschoice.module.scss
+++ b/src/components/EditorsChoice/editorschoice.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/colors';
 
 .editorsChoice {
-    float: right;
-    position: relative;
+    // float: right;
+    // position: relative;
     background-color: rgba($teal, 0.1);
     width: 145px;
     padding: 10px 10px;
@@ -13,6 +13,10 @@
     border-radius: 4px;
     transition: border-color 0.2s ease;
     box-shadow: inset 0 0 2px black, inset 0 0 80px rgba(0,0,0,0.5);
+
+    position: absolute;
+    left: calc(50% + 26em - 10vw);
+    top: 3em;
 
     &:after {
         background-image: url("../../images/editors_choice_crow.png");
